# social-curiosity

./: .gitignore  README.md  create_sample_data.py  generate_comprehensive_plots.py  generate_comprehensive_report.py  main.py  pyproject.toml
deep/: __init__.py
deep/config/: __init__.py  default.py
deep/src/: __init__.py  agents.py  environment.py  plot_runs.py  train.py  utils.py
reports/markdown/: comprehensive_report.md
src/: __init__.py
src/common/: __init__.py  experiment_data.py
src/utils/: __init__.py  helpers.py
tabular/: __init__.py
tabular/config/: __init__.py  default.py
tabular/src/: __init__.py  agents.py  environment.py  plot_runs.py  sim_integration_example.py  social_motivation.py  test_environment.py  test_social_motivation.py  train.py
