[project]
name = "social-curiosity"
version = "0.1.0"
description = "Social Curiosity in Multi-Agent GridWorld with Tabular and Deep Learning Implementations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "gymnasium>=0.29.0",
    "pettingzoo>=1.24.0",
    "stable-baselines3>=2.0.0",
    "torch>=2.0.0",
    "wandb>=0.16.0",
    "tensorboard>=2.13.0",
    "tqdm>=4.66.0",
    "seaborn>=0.12.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0"
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
