[project]
name = "social-curiosity"
version = "0.1.0"
description = "Social Curiosity in Multi-Agent GridWorld with Tabular and Deep Learning Implementations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
    "gymnasium",
    "pettingzoo",
    "stable-baselines3",
    "torch",
    "wandb",
    "tensorboard",
    "tqdm",
    "seaborn"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy",
    "ruff"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
